Mise en place du collapse et footer en fixe en bas de page

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -1,3 +1,4 @@
 $base-color: black;
 $invert-base-color: white;
-
+$red-color: #FF6060;
+$grey-color: #FBFBFB;
