--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,10 @@
   padding: 2vh;
   text-align: center;
   max-width: none;
+  position:fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   img {
     padding:4vh;
   }
